--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,69 @@
-
+.container {
+    margin: 30px auto;   
+    font-family: "Comfortaa", cursive;
+ }
+ /**** HEADER ****/
+ .udacity-symbol {
+    width: 120px;
+ }
+ 
+ .name {
+    float: right;
+    text-transform: uppercase;
+    color: #2d3c49;
+ }
+ 
+ .name h1 {
+    font-size: 4em;
+ }
+ 
+ .name p {
+    float: right;
+ }
+ 
+ .line {
+    border: 2px solid #7d97ad;
+ }
+ 
+ /**** BIG IMAGE ****/
+ .code-pic {
+    width: 100%;
+    height: 400px;
+    margin: 10px 0;
+ }
+ 
+ /**** SMALL IMAGES ****/
+ .project-section-title {
+    color: #7d97ad;
+ }
+ .project-pic {   
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    flex-direction: row;
+ }
+ 
+ .project {
+    display: inline-block;
+    width: calc((100% - 40px) / 3);
+    margin-right: 20px;
+    text-align: center;
+ }
+ 
+ .project img {
+    height: 250px;
+ }
+ 
+ .project:last-of-type {
+    margin-right: 0;
+ }
+ 
+ .project-title,
+ .project-link {
+    color: #2d3c49;
+ }
+ 
+ .project-title {
+    text-transform: uppercase;
+ }
+ 
