--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@
     text-align: center; 
     -webkit-transition: box-shadow 0.3s ease-in-out; /* Safari */
     transition: box-shadow 0.3s ease-in-out;
+    padding-bottom: 20px;
  }
  
  .project img {   
@@ -72,7 +73,47 @@
     text-transform: uppercase;
  }
 
+ .project-link {     
+    overflow-wrap: break-word;
+ }
+
  .project:hover {
      box-shadow: 3px 3px 30px silver;
  }
  
+@media screen and (max-width: 1000px) {
+    .name h1 {
+        font-size: 3em;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .name h1 {
+        font-size: 2em;
+    }
+
+    .name p {
+        font-size: 0.7em;
+    }
+
+    .udacity-symbol {
+        width: 90px;
+    }
+
+    .code-pic {
+        width: 100%;
+        height: 200px;
+     }
+
+     .project-pic { 
+        flex-direction: column;
+     }
+     .project {
+        width: 100%;
+        margin: 15px 0;
+     }
+
+     .project-title {
+        font-size: 1.3em;
+    }
+}
