--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@
     margin: 30px auto;   
     font-family: "Comfortaa", cursive;
  }
+
+ a:hover,
+ a:visited {
+    text-decoration-line: none; 
+ }
  /**** HEADER ****/
  .udacity-symbol {
     width: 120px;
@@ -92,20 +97,17 @@
     width: 50%;
 }
 .social-media {
-    text-align: right;;
+    text-align: right;
 }
 
 .social-media .fa {
     text-align: center;
     margin: 10px;
-    width: 40px;
     -webkit-transition: width 1s, height 1s, -webkit-transform 1s; /* Safari */
     transition: width 1s, height 1s, transform 1s;
  }
  .social-media .fa:hover {
     color: #60516d;
-    width: 40px;
-    height: 40px;
     -webkit-transform: rotate(360deg); /* Safari */
     transform: rotate(360deg);
  }
@@ -135,17 +137,29 @@
     .code-pic {
         width: 100%;
         height: 200px;
-     }
+    }
 
-     .project-pic { 
+    .project-pic { 
         flex-direction: column;
-     }
-     .project {
+    }
+
+    .project {
         width: 100%;
         margin: 15px 0;
-     }
+    }
 
-     .project-title {
+    .project-title {
         font-size: 1.3em;
     }
+
+    .footer-flex {
+        flex-direction: column;
+    }
+    
+    .footer-div {
+        width: 100%;
+    }
+    .social-media {
+        text-align: center;
+    }       
 }
