--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 
  a:hover,
  a:visited {
-    text-decoration-line: none; 
+    text-decoration: none !important;
  }
  /**** HEADER ****/
  .udacity-symbol {
