--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,9 @@
  
  a,
  a:hover,
- a:visited {
-    text-decoration: none;
+ a:visited,
+ a:active {
+    text-decoration: none !important;
  }
  
  /**** HEADER ****/
@@ -51,7 +52,6 @@
  .project-pic {
     display: flex;
     width: 100%;
-    flex-wrap: wrap;
     flex-direction: row;
  }
  
@@ -66,7 +66,6 @@
  }
  
  .project img {
-    border: 1px solid #8999a7;
     height: 200px;
     width: 100%;
  }
@@ -92,9 +91,10 @@
  .project:hover {
     box-shadow: 3px 3px 30px silver;
  }
- 
+
  /***** FOOTER *****/
  .footer-flex {
+     padding-top: 10px;
     display: flex;
     flex-wrap: wrap;
  }
@@ -106,7 +106,7 @@
     text-align: right;
  }
  
- .social-media .fa {
+ .fa {
     text-align: center;
     margin: 10px;
     color: #02b3e4;
@@ -144,7 +144,7 @@
   
  }
 
- @media screen and (max-width: 500px) {
+ @media screen and (max-width: 600px) {
      .container {
          width: 95%;
      }
