--- a/styles.css
+++ b/styles.css
@@ -20,28 +20,28 @@
  .name {
     float: right;
     text-transform: uppercase;
-    color: #2d3c49;
+    color: #2d3c49;    
  }
  
- .name h1 {
+ .persons-name {
     font-size: 4em;
     margin: 0;
  }
  
- .name p {
+ .occupation-name {
     float: right;
-    margin-bottom: 20px;
  }
  
  .border-down {
     border-bottom: 3px solid #7d97ad;
+    padding-bottom: 20px; 
  }
  
  /**** BIG IMAGE ****/
  .code-pic {
     width: 100%;
     height: 400px;
-    margin: 10px 0;
+    margin: 20px 0;
  }
  
  /**** SMALL IMAGES ****/
@@ -95,7 +95,7 @@
 
  /***** FOOTER *****/
  .footer-flex {
-     padding-top: 10px;
+    padding-top: 10px;
     display: flex;
     flex-wrap: wrap;
  }
@@ -103,6 +103,7 @@
  .footer-div {
     width: 50%;
  }
+ 
  .social-media {
     text-align: right;
  }
@@ -120,8 +121,7 @@
     transform: rotate(360deg);
  }
  
- /**** MEDIA ****/
- 
+ /**** MEDIA ****/ 
  @media screen and (max-width: 1000px) {
     .name h1 {
        font-size: 3em;
@@ -135,8 +135,7 @@
 
      .udacity-symbol {
         width: 110px;
-     }
-  
+     }  
 
      .code-pic {
         width: 100%;
@@ -149,6 +148,7 @@
      .container {
          width: 95%;
      }
+
     .name h1 {
        font-size: 1.5em;
     }
@@ -186,6 +186,7 @@
     .footer-div {
        width: 100%;
     }
+
     .social-media {
        text-align: center;
     }
