--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,120 +4,124 @@
     font-family: "Comfortaa", cursive; 
  }
 
- a,
- a:hover,
- a:visited,
- a:active {
+a,
+a.hover,
+a:visited,
+a:active {
     text-decoration: none !important;
  }
  
 /**** HEADER ****/
- .col-md-2 {
+.col-md-2 {
     padding: 0;
  }
  
- .udacity-symbol {
+.udacity-symbol {
     width: 70%;
     padding-bottom: 10px;
 }
  
- .col-md-10 {
+.col-md-10 {
     text-align: right;
     align-items: stretch;
     padding-right: 0;
- }
+}
  
- .name {
+.name {
     font-size: 4em;
     color: #2d3c49; 
- }
+}
  
 .occupation-name {
     font-size: 2em;
     margin-bottom: 0;
 }
 
- .border-bottom {
+.border-bottom {
     border-bottom: 3px solid #7d97ad;
     margin-bottom: 20px;
- }
+}
   
  /*** BIG IMAGE ***/
- .img-big {
+.img-big {
     width: 100%;
     margin: 10px 0;
- }
+}
  
- .row {
+.row {
     width: 100%;
     margin: 0;
- }
+}
  
- /***** PROJECT SECTION ****/
- .project-section-title {
-    color: #7d97ad;
- }
- 
- .project-title,
- .project-link {
-    color: #2d3c49;
- }
+.col-md-12 {
+    padding: 0;
+}
 
- .col-md-4 {
-     width: 30%;
-     margin-right: 5%;
-     padding: 0;
+/***** PROJECT SECTION ****/
+.project-section-title {
+    color: #7d97ad;
+}
+ 
+.project-title,
+.project-link {
+    color: #2d3c49;
+}
+
+.col-md-4 {
+    width: 30%;
+    margin-right: 5%;
+    padding: 0;
     text-align: center;
     -webkit-transition: box-shadow 0.3s ease-in-out; /* Safari */
     transition: box-shadow 0.3s ease-in-out;
- }
- .col-md-4:last-of-type {
+}
+
+.col-md-4:last-of-type {
     margin-right: 0;
- }
- 
- .col-md-4:first-of-type {
+}
+
+.col-md-4:first-of-type {
     margin-left: 0;
- }
+}
  
- .img-small {
+.img-small {
     width: 100%;
     height: 200px;
- }
+}
  
- .col-md-4:hover {
+.col-md-4:hover {
     box-shadow: 3px 3px 30px silver;
- }
+}
 
-
- /***** FOOTER ****/
- .col-md-6 {
+/***** FOOTER ****/
+.col-md-6 {
     padding: 0;
- }
+}
  
- .social-media {
+.social-media {
     text-align: right;
- }
+}
  
- .fa {
+.fa {
     text-align: center;
     margin: 10px;
     color: #02b3e4;
     -webkit-transition: width 1s, height 1s, -webkit-transform 1s; /* Safari */
     transition: width 1s, height 1s, transform 1s;
- }
+}
  
- .social-media .fa:hover {
+.social-media .fa:hover {
     color: #60516d;
     -webkit-transform: rotate(360deg); /* Safari */
     transform: rotate(360deg);
- }
+}
 
- footer .row {
-     border: none;
- }
+.row:last-child {
+    border: none;
+}
  
- /***** MEDIA ****/
- @media screen and (max-width: 1060px) {
+/***** MEDIA ****/
+@media screen and (max-width: 1060px) {
     .container {
         width: 90%;
         flex-wrap: wrap;
@@ -129,8 +133,8 @@
     }
 
     .name {
-       font-size: 3em;
-       margin: 0;
+        font-size: 3em;
+        margin: 0;
     }
     
     .occupation-name {
@@ -138,31 +142,30 @@
     }
     
     .udacity-symbol {
-       width: 90%;
+        width: 90%;
     }
    
     .img-small {
-       height: 150px;
+        height: 150px;
     }
     
-    main .row:last-child {
+    .row:nth-of-type(2) {
         padding-bottom: 20px;
-    }
+    } 
  }
 
  @media screen and (max-width: 600px) {
     .name {
-       font-size: 1.5em;
-       margin: 0;
+        font-size: 1.5em;
+        margin: 0;
     }
     
     .occupation-name {
         font-size: 1em;
-       /* margin: 0; */
     }
     
     .udacity-symbol {
-       width: 90%;
+        width: 90%;
     }
     
     .project-section-title {
@@ -174,7 +177,7 @@
     }
 
     .img-small {
-       height: 150px;
+        height: 150px;
     }
 
     .col-12 {
@@ -183,7 +186,7 @@
         text-align: center;      
     }   
     
-    footer .col-12 {
+    .col-12:last-of-type {
         margin: 0;
     }
  }
